--- a/css/estilos.css
+++ b/css/estilos.css
@@ -98,21 +98,25 @@ footer a{
     margin-right: 15px;
 }
 
-
-
-/* .redes-landing:hover{
-    opacity: 0.5;
+.child{
+    transition: 0.4s;
 }
 
-.redes-landing .fab:hover{
-    color: #fff;
-    background-color: red;
+.redes:hover .child{
+    opacity: 0.3;
+}
+
+.redes .child:hover{
     opacity: 1;
-} */
+}
 
+.redes-landing:hover .child{
+    opacity: 0.3;
+}
 
-
-
+.redes-landing .child:hover{
+    opacity: 1;
+}
 
 /* ---------------------- PAGINA WEB BIOGRAFIA----------------------- */
 
@@ -179,10 +183,11 @@ footer a{
     width: 45%;
 }
 
-.izquierda img{
+.img-bio{
     width: 100%;
     object-fit: contain;
     object-position: center;
+    transition:all .5s ease-in-out;
 }
 
 .texto-biografia{
@@ -191,6 +196,11 @@ footer a{
     color: rgb(43, 37, 37);
     margin-left: 30px;
     margin-bottom: 50px;
+}
+
+.img-bio:hover{
+    transition:all .5s ease-in-out;
+    filter: blur(.9px);
 }
 
 /* ---------------------- PAGINA WEB DISCOGRAFIA----------------------- */
@@ -216,10 +226,11 @@ footer a{
     width: 45%;
 }
 
-.izquierda img{
+.img-discografia{
     width: 100%;
     object-fit: contain;
     object-position: center;
+    transition:all .5s ease-in-out;
 }
 .titulo-secundario{
     margin-bottom: 3%;
@@ -237,6 +248,11 @@ footer a{
     margin-bottom: 5px;
 }
 
+.img-discografia:hover {
+    -webkit-transform:scale(.9);
+    transform: scale(.9);
+    transition:all .5s ease-in-out;
+}
 
 
 
@@ -262,6 +278,7 @@ footer a{
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition:all .5s ease-in-out;
 }
 
 .galeria-item{
@@ -302,6 +319,11 @@ footer a{
     font-weight: 300;
 }
 
+.img-grid:hover{
+    filter: saturate(180%);
+    transition:all .5s ease-in-out;
+}
+
 /* ---------------------- PAGINA WEB VIDEOS----------------------- */
 .padre-videos{
     width: 80%;
@@ -316,6 +338,7 @@ footer a{
     height: 400px;
     border: 1px solid rgba(214, 206, 206, 0.555);
     text-align: center;
+    transition:all .5s ease-in-out;
 }
 
 .carta:nth-child(3){
@@ -333,6 +356,13 @@ footer a{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+}
+
+.carta:hover{
+    -webkit-box-shadow: 10px 2px 15px -9px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 2px 15px -9px rgba(0,0,0,0.75);
+    box-shadow: 10px 2px 15px -9px rgba(0,0,0,0.75);
+    transition:all .5s ease-in-out;
 }
 
 /* ---------------------- PAGINA WEB REGISTRO----------------------- */
@@ -435,8 +465,8 @@ input{
     .izquierda img{
         width: 80%;
     }
-    
-    .uno, .dos{
+
+    /* .uno, .dos{
         display: none;
     }
 
@@ -444,7 +474,7 @@ input{
         display: block;
         margin: auto;
         margin-bottom: 30px;
-    }
+    } */
 
     footer{
         height: inherit;
