--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,29 +5,6 @@
     box-sizing: border-box;
 }
 
-/* ------------------------------ FOOTER VERSION MOBILE -----------------------------------------*/
-
-
-footer{
-    background-color: rgba(206, 201, 201, 0.137);
-    height: 50px;
-    line-height: 50px;
-    text-align: center;
-    font-family: 'Raleway', sans-serif;
-    text-transform: uppercase;
-    font-weight: 200;
-    color: rgb(102, 98, 98);
-}
-
-footer a{
-    color: rgba(19, 16, 16, 0.925);
-}
-
-.redes-footer{
-    display: none;
-}
-
-
 /* ------------------------------ LANDING PAGE -----------------------------------------*/
 
 .cabecera{
@@ -42,13 +19,8 @@ footer a{
     align-items: center;
 }
 
-
 .slide{
-    position: absolute;
-    right: -65px;
-    bottom: -35px;
-    width: 52%;
-    min-width: 580px;
+    display: none;
 }
 
 .contenedor{
@@ -85,7 +57,6 @@ footer a{
     background-color: #fff;
     color: #000;
     font-weight: bold;
-
 }
 
 .redes-landing{
@@ -121,22 +92,20 @@ footer a{
 /* ---------------------- PAGINA WEB BIOGRAFIA----------------------- */
 
 .menu{
-    height: 16vh;
-    border-bottom: 1px solid rgba(214, 206, 206, 0.555);
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-}
+    flex-wrap: wrap;
+} 
 
 .logo{
-    width: 300px;
+    width: 100px; 
 } 
 
 .links a{
     font-family: 'Raleway', sans-serif;
-    font-size: 15px;
+    font-size: 11px;
     color: rgba(19, 16, 16, 0.925);
-    margin-left: 10px;
 }
 
 .links a:hover{
@@ -145,10 +114,8 @@ footer a{
     border-bottom: 1px solid rgba(179, 175, 175, 0.384);
 }
 
-.redes .fab{
-    color: rgba(34, 33, 33, 0.829);
-    font-size: 20px;
-    margin-right: 15px;
+.redes{
+    display: none;
 }
 
 .titulo{
@@ -156,35 +123,33 @@ footer a{
     margin-bottom: 9%;
     font-family: 'Raleway', sans-serif;
     text-transform: uppercase;
+    font-size: 16px;
     font-weight: 200;
     color: rgb(102, 98, 98);
 }
 
 .padre-biografia{
-    width: 80%;
+    width: 100%;
     margin: auto;
-    border-bottom: 1px solid rgba(214, 206, 206, 0.555);
-    padding-bottom: 100px;
-    margin-bottom: 100px;
 }
 
 .contenedor-biografia{
-    height: 220vh;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
+    margin-bottom: 50px;
 }
 
 .derecha{
-    width: 45%;
+    width: 100%;
 }
-
+    
 .izquierda{
-    width: 45%;
+    width: 100%;
 }
 
 .img-bio{
-    width: 100%;
+    width: 80%;
+    display: block;
+    margin: auto;
+    margin-bottom: 10px;
     object-fit: contain;
     object-position: center;
     transition:all .5s ease-in-out;
@@ -192,10 +157,12 @@ footer a{
 
 .texto-biografia{
     font-family: 'Raleway', sans-serif;
+    font-size: 12px;
     font-weight: 300;
     color: rgb(43, 37, 37);
-    margin-left: 30px;
-    margin-bottom: 50px;
+    padding-left: 30px;
+    padding-right: 30px;
+    margin-bottom: 20px;
 }
 
 .img-bio:hover{
@@ -203,39 +170,64 @@ footer a{
     filter: blur(.9px);
 }
 
+footer{
+    background-color: rgba(206, 201, 201, 0.137);
+    text-align: center;
+    font-family: 'Raleway', sans-serif;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 200;
+    color: rgb(102, 98, 98);
+}
+
+.redes-footer .fab{
+    color: rgb(102, 98, 98);
+    margin-bottom: 10px;
+    padding-top: 10px;
+}
+
+footer a{
+    color: rgba(19, 16, 16, 0.925);
+}
+
 /* ---------------------- PAGINA WEB DISCOGRAFIA----------------------- */
+
 .padre-discografia{
-    width: 80%;
+    width: 100%;
     margin: auto;
-    border-bottom: 1px solid rgba(214, 206, 206, 0.555);
-    padding-bottom: 100px;
-    margin-bottom: 100px;
 }
 
 .contenedor-discografia{
-    overflow: hidden;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
+    margin-bottom: 50px;
 }
 
 .derecha{
-    width: 45%;
+    width: 100%;
 }
 
 .izquierda{
-    width: 45%;
+    width: 100%;
 }
 
 .img-discografia{
-    width: 100%;
+    width: 80%;
+    display: block;
+    margin: auto;
+    margin-bottom: 50px;
     object-fit: contain;
     object-position: center;
     transition:all .5s ease-in-out;
 }
+
 .titulo-secundario{
     margin-bottom: 3%;
+    margin-left: 50px;
     font-family: 'Raleway', sans-serif;
     text-transform: uppercase;
+    font-size: 15px;
     font-weight: 200;
     color: rgb(102, 98, 98);
 }
@@ -245,7 +237,9 @@ footer a{
     font-weight: 300;
     color: rgb(43, 37, 37);
     text-transform: capitalize;
+    font-size: 12px;
     margin-bottom: 5px;
+    margin-left: 50px;
 }
 
 .img-discografia:hover {
@@ -254,25 +248,23 @@ footer a{
     transition:all .5s ease-in-out;
 }
 
-
-
 /* ---------------------- PAGINA WEB GALERIA----------------------- */
 
 .padre-galeria{
-    width: 80%;
+    width: 100%;
     margin: auto;
-    border-bottom: 1px solid rgba(214, 206, 206, 0.555);
-    padding-bottom: 100px;
-    margin-bottom: 100px;
+    margin-bottom: inherit;
 }
 
 .contenedor-galeria{
     overflow: hidden;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 300px;
-    grid-gap: 5px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: 250px;
+    grid-gap: 2px;
+    margin-bottom: 50px;
 }
+
 
 .img-grid{
     width: 100%;
@@ -285,29 +277,6 @@ footer a{
     position: relative;
 }
 
-.galeria-item:nth-child(4){
-    grid-column-start: span 2;
-}
-
-.galeria-item:nth-child(8){
-    grid-column-start: span 2;
-}
-
-.galeria-item:nth-child(5){
-    grid-row-start: span 2;
-}
-
-.galeria-item:nth-child(10){
-    grid-row-start: span 2;
-}
-
-.galeria-item:nth-child(14){
-    grid-row-start: span 2;
-}
-
-.galeria-item:nth-child(13){
-    grid-column-start: span 2;
-}
 
 .titulo-galeria{
     position: absolute;
@@ -317,6 +286,8 @@ footer a{
     width: 100%;
     font-family: 'Raleway', sans-serif;
     font-weight: 300;
+    font-size: 12px;
+    text-align: right;
 }
 
 .img-grid:hover{
@@ -324,25 +295,26 @@ footer a{
     transition:all .5s ease-in-out;
 }
 
-/* ---------------------- PAGINA WEB VIDEOS----------------------- */
+/* ---------------------- PAGINA WEB VIDEOS ----------------------- */
 .padre-videos{
-    width: 80%;
+    width: 100%;
     margin: auto;
-    border-bottom: 1px solid rgba(214, 206, 206, 0.555);
-    padding-bottom: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
+}
+
+.padre-carta{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .carta{
-    width: 40%;
-    height: 400px;
+    overflow: hidden;
+    width: 80%;
     border: 1px solid rgba(214, 206, 206, 0.555);
     text-align: center;
+    margin-bottom: 50px;
     transition:all .5s ease-in-out;
-}
-
-.carta:nth-child(3){
-    margin-top: 50px;
 }
 
 .imagen-carta{
@@ -350,12 +322,6 @@ footer a{
     object-fit: cover;
     margin: auto;
     text-align: center;
-}
-
-.padre-carta{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
 }
 
 .carta:hover{
@@ -368,32 +334,32 @@ footer a{
 /* ---------------------- PAGINA WEB REGISTRO----------------------- */
 
 .padre-registro{
-    width: 80%;
+    width: 100%;
     margin: auto;
 }
 
 .contenedor-registro{
     display: flex;
+    flex-direction: column-reverse;
     justify-content: space-around;
     align-items: center;
-    border-bottom: 1px solid rgba(214, 206, 206, 0.555);
-    padding-bottom: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 50px;
 }
 
 .img-registro{
-    width: 100%;
+    width: 80%;
 }
 
+
 form{
-    width: 40%;
+    width: 80%;
     display: flex;
     flex-direction: column;
 }
 
 .imagen{
-    width: 50%;
-    
+    width: 80%;
+    margin-bottom: 20px;
 }
 
 input{
@@ -403,6 +369,7 @@ input{
     background-color: rgba(255,255,255,.5);
     border: solid 1px rgba(179, 175, 175, 0.384);
 }
+
 
 .boton-registro{
     width: 120px;
@@ -420,215 +387,309 @@ input{
     font-weight: bold;
 }
 
-@media screen and (max-width: 768px){
 
-    /*-------- LANDING PAGE --------*/
-    .slide{
-        display: none;
-    }
 
-    /*-------- BIOGRAFIA  --------*/
-    .menu{
-        height: inherit;
-    }
+/* --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------MEDIAQUERIES--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------*/
 
+
+@media (min-width: 481px) and (max-width: 768px){
+    /* ------PAGINA WEB BIOGRAFIA----- */
+    
     .logo{
-        width: 150px;
+        width: 120px; 
+    } 
+    
+    .links a{
+        font-size: 13px;
     }
-
+    
     .redes{
+        display: inherit;
+    }
+    
+    .redes .fab{
+        color: rgba(34, 33, 33, 0.829);
+        font-size: 17px;
+        margin-right: 9px;
+    }
+    
+    footer{
+        background-color: rgba(206, 201, 201, 0.137);
+        height: 50px;
+        line-height: 50px;
+        text-align: center;
+        font-family: 'Raleway', sans-serif;
+        text-transform: uppercase;
+        font-weight: 200;
+        color: rgb(102, 98, 98);
+    }
+    
+    footer a{
+        color: rgba(19, 16, 16, 0.925);
+    }
+    
+    .redes-footer .fab{
         display: none;
     }
+    
+}
 
+
+@media (min-width: 769px) {
+    .cabecera{
+        height: 100vh;
+        position: relative;
+        overflow: hidden;
+        border: solid 8px #fff;
+        background-image: url(../img/fondo-pexels-akwice-3094799.jpg);
+        background-size: cover;
+        background-attachment: fixed;
+        display: flex;
+        align-items: center;
+    }
+    
+    
+    .slide{
+        display: inherit;
+        position: absolute;
+        right: -40px;
+        bottom: -35px;
+        width: 52%;
+        min-width: 580px;
+    }
+    
+    .contenedor{
+        height: 50vh;
+        margin-left: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: flex-start;
+    }
+    
+    .logo-landing{
+        width: 70%;
+    }
+    
+    .titulo-landing{
+        font-family: 'Raleway', sans-serif;
+        font-weight: 300;
+        color: #fff;
+    }
+    
+
+/* ------PAGINA WEB BIOGRAFIA----- */  
+    .menu{
+        height: 16vh;
+        border-bottom: 1px solid rgba(214, 206, 206, 0.555);
+        justify-content: space-around;
+    }
+    
+    .logo{
+        width: 250px;
+    } 
+    
+    .links a{
+        font-size: 15px;
+        color: rgba(19, 16, 16, 0.925);
+        margin-left: 10px;
+    }
+    
+    .redes{
+        display: inherit;
+    }
+    
+    .redes .fab{
+        color: rgba(34, 33, 33, 0.829);
+        font-size: 25px;
+        margin-right: 15px;
+    } 
+    
+    .titulo{
+        font-size: 30px;
+        margin-top: 6%;
+        margin-bottom: 9%;
+        font-family: 'Raleway', sans-serif;
+        text-transform: uppercase;
+        font-weight: 200;
+        color: rgb(102, 98, 98);
+    }
+    
     .padre-biografia{
-        width: 100%;
-        border-bottom: inherit;
-        padding-bottom: inherit;
-        margin-bottom: inherit;
+        width: 80%;
+        border-bottom: 1px solid rgba(214, 206, 206, 0.555);
+        padding-bottom: 100px;
+        margin-bottom: 100px;
     }
     
     .contenedor-biografia{
-        height: inherit;
-        overflow: inherit;
-        display: inherit;
-        margin-bottom: 50px;
+        height: 220vh;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
     }
     
     .derecha{
-        width: 100%;
+        width: 45%;
     }
     
     .izquierda{
-        width: 100%;
+        width: 45%;
     }
     
-    .izquierda img{
-        width: 80%;
+    .img-bio{
+        width: 100%;
+        
+    }
+    
+    .texto-biografia{
+        font-size: 17px;
     }
 
-    /* .uno, .dos{
+    footer{
+        background-color: rgba(206, 201, 201, 0.137);
+        height: 80px;
+        line-height: 80px;
+        text-align: center;
+        font-family: 'Raleway', sans-serif;
+        text-transform: uppercase;
+        font-weight: 200;
+        color: rgb(102, 98, 98);
+        font-size: 17px;
+    }
+    
+    footer a{
+        color: rgba(19, 16, 16, 0.925);
+    }
+    
+    .redes-footer .fab{
         display: none;
     }
 
-    .tres{
-        display: block;
-        margin: auto;
-        margin-bottom: 30px;
-    } */
 
-    footer{
-        height: inherit;
-    }
-
-    /*-------- DISCOGRAFIA  --------*/
-
+/* ------PAGINA WEB DISCOGRAFIA----- */
     .padre-discografia{
-        width: 100%;
-        border-bottom: inherit;
-        padding-bottom: inherit;
-        margin-bottom: inherit;
+        width: 80%;
+        border-bottom: 1px solid rgba(214, 206, 206, 0.555);
+        padding-bottom: 100px;
+        margin-bottom: 100px;
     }
-    
+
     .contenedor-discografia{
-        overflow: inherit;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        margin-bottom: 50px;
+        flex-direction: row;
+        overflow: hidden;
+        align-items: flex-start;
     }
-    
+
     .derecha{
-        width: 100%;
+        width: 45%;
     }
     
     .izquierda{
-        width: 100%;
+        width: 45%;
     }
     
-    .izquierda img{
-        width: 80%;
-        display: block;
-        margin: auto;
-        margin-bottom: 50px;
+    .img-discografia{
+        width: 100%;
+        object-fit: contain;
+        object-position: center;
+        transition:all .5s ease-in-out;
     }
 
     .titulo-secundario{
-        margin-left: 50px;
+        margin-bottom: inherit;
+        font-size: 24px;
     }
     
     .parrafo-album{
-        margin-left: 50px;
+        font-size: 17px;
     }
+    
 
-    /*-------- GALERIA  --------*/
+
+/* ------PAGINA WEB GALERIA----- */
     .padre-galeria{
-        width: 100%;
-        border-bottom: inherit;
-        padding-bottom: inherit;
-        margin-bottom: inherit;
+        width: 80%;
+        margin: auto;
+        border-bottom: 1px solid rgba(214, 206, 206, 0.555);
+        padding-bottom: 100px;
+        margin-bottom: 100px;
     }
     
     .contenedor-galeria{
         overflow: hidden;
         display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        grid-auto-rows: 250px;
-        grid-gap: 2px;
-        margin-bottom: 50px;
-    }
-    
-    .galeria-item{
-        position: relative;
+        grid-template-columns: repeat(3, 1fr);
+        grid-auto-rows: 300px;
+        grid-gap: 5px;
     }
     
     .galeria-item:nth-child(4){
-        grid-column-start: inherit;
+        grid-column-start: span 2;
     }
     
     .galeria-item:nth-child(8){
-        grid-column-start: inherit;
+        grid-column-start: span 2;
     }
     
     .galeria-item:nth-child(5){
-        grid-row-start: inherit;
+        grid-row-start: span 2;
     }
     
     .galeria-item:nth-child(10){
-        grid-row-start: inherit;
+        grid-row-start: span 2;
     }
     
     .galeria-item:nth-child(14){
-        grid-row-start: inherit;
+        grid-row-start: span 2;
     }
     
     .galeria-item:nth-child(13){
-        grid-column-start: inherit;
+        grid-column-start: span 2;
+    }
+    
+    .titulo-galeria{
+        font-size: 17px;
+    }
+    
+    .img-grid:hover{
+        cursor: pointer;
     }
 
 
-    /*-------- VIDEOS  --------*/
+/* ------PAGINA WEB VIDEOS----- */
+.padre-videos{
+    width: 80%;
+    margin: auto;
+    border-bottom: 1px solid rgba(214, 206, 206, 0.555);
+    padding-bottom: 100px;
+    margin-bottom: 100px;
+}
 
-    .padre-videos{
-        width: 100%;
-        border-bottom: inherit;
-        padding-bottom: inherit;
-        margin-bottom: inherit;
-        margin-bottom: 50px;
-    }
-    
-    .carta{
-        overflow: hidden;
-        width: 80%;
-        height: 300px;
-        border: 1px solid rgba(214, 206, 206, 0.555);
-        text-align: center;
-        margin-bottom: 50px;
-    }
-    
-    .carta:nth-child(3){
-        margin-top: inherit;
-    }
-    
+.carta{
+    width: 40%;
+    height: 400px;
+    border: 1px solid rgba(214, 206, 206, 0.555);
+    text-align: center;
+}
 
-    /*-------- REGISTRO  --------*/
 
-    .padre-registro{
-        width: 100%;
-    }
-    
-    .contenedor-registro{
-        flex-direction: column-reverse;
-        border-bottom: inherit;
-        padding-bottom: inherit;
-        margin-bottom: inherit;
-        margin-bottom: 50px;
 
-    }
-    
-    .img-registro{
-        width: 100%;
-    }
-    
-    form{
-        width: 80%;
-    }
-    
-    .imagen{
-        width: 80%;
-        margin-bottom: 20px;
-    }
-    
-    input{
-        width: 80%;
-    }
-    
-    .redes-footer{
-        display: inherit;
-    }
 
-    .redes-footer .fab{
-        color: rgb(102, 98, 98);
 
-    }
-    
+
+/* ------PAGINA WEB REGISTRO----- */
+.padre-registro{
+    width: 80%;
+    margin: auto;
+}
+
+.contenedor-registro{
+    display: flex;
+    flex-direction: row;
+    border-bottom: 1px solid rgba(214, 206, 206, 0.555);
+    padding-bottom: 100px;
+    margin-bottom: 100px;
+}
+
 }
